# UVexerciseProject

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/hello_svc/: asgi.py  scripts.py  views.py
test/: test_views.py
