[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_svc"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "一个用来熟悉uv包管理工具的FastAPI项目"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.103.1",
    "uvicorn==0.23.2",
    "pydantic==2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.1",
]

[project.scripts]
uvexercise = "hello_svc.scripts:serve"


[tool.pytest.ini_options]
testpaths = ["src", "test"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"] 